--- a/acpid/manifest.yml
+++ b/acpid/manifest.yml
@@ -1,6 +1,6 @@
 version: 1
 name: acpid
-description: "Flexible and extensible daemon for delivering ACPI events"
+description: "ACPI Daemon that handles power button events"
 all:
   install-script: "install.sh"
   copy: "all"
