--- a/eudev/manifest.yml
+++ b/eudev/manifest.yml
@@ -1,7 +1,7 @@
 version: 1
 name: eudev
 system: true
-description: "eudev project + kmod modified"
+description: "eudev + kmod will assist with auto module loading"
 all:
   install-script: "install.sh"
   copy: "all"
