unified epyc7002 format

--- a/codecpatch/manifest.yml
+++ b/codecpatch/manifest.yml
@@ -12,7 +12,8 @@ available-for:
   broadwell-4.4.302:
   broadwellnk-4.4.180:
   broadwellnk-4.4.302:
-  epyc7002-5.10.55:
+  epyc7002-7.1-5.10.55:
+  epyc7002-7.2-5.10.55:
   denverton-4.4.180:
   denverton-4.4.302:
   geminilake-4.4.180:
