--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -147,7 +147,15 @@ jobs:
           make DESTDIR=/source/output install
           git clone -c http.sslVerify=false --single-branch https://github.com/eudev-project/eudev.git /tmp/eudev
           cd /tmp/eudev
-          git checkout v3.2.11
+          git checkout v3.2.12
+
+          # error: 'for' loop initial declarations are only allowed in C99 or C11 mode
+          if [ "${{ matrix.version }}" = "6.2" ]; then
+            sed -i 's/for (char \*p/char \*p = NULL; for (p/g' ./src/shared/util.h
+            sed -i 's/for (size_t a/size_t a = 0; for(a/g; s/for (size_t i/size_t i = 0; for(i/g; s/for (uint16_t i/uint16_t i = 0; for(i/g' ./src/dmi_memory_id/dmi_memory_id.c
+            sed -i 's/for (size_t pos/size_t pos = 0; for (pos/g; s/for (size_t i/size_t i = 0; for(i/g' ./src/fido_id/fido_id_desc.c
+          fi
+
           ./autogen.sh
           ./configure CC=${CC} --host=${HOST} --prefix=/usr --sysconfdir=/etc --disable-manpages --disable-selinux --disable-mtd_probe --enable-kmod
           [ -z "`grep 'env.mak' Makefile`" ] && sed -i '1 i include /env.mak' Makefile
