--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: 'format %y.%-m.$i or auto'
+        description: "format %y.%-m.$i or auto"
         required: false
         type: string
 
@@ -22,7 +22,7 @@ jobs:
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          sudo timedatectl set-timezone "Asia/Shanghai" 
+          sudo timedatectl set-timezone "Asia/Shanghai"
 
       - name: Calculate version
         run: |
@@ -67,5 +67,3 @@ jobs:
         with:
           tag_name: ${{ env.VERSION }}
           files: addons.zip
-
-            
