--- a/codecpatch/manifest.yml
+++ b/codecpatch/manifest.yml
@@ -12,6 +12,11 @@ available-for:
   broadwell-4.4.302:
   broadwellnk-4.4.180:
   broadwellnk-4.4.302:
+  broadwellnkv2-4.4.180:
+  broadwellnkv2-4.4.302:
+  broadwellntbap-4.4.59:
+  broadwellntbap-4.4.180:
+  broadwellntbap-4.4.302:
   epyc7002-7.1-5.10.55:
   epyc7002-7.2-5.10.55:
   denverton-4.4.180:
