--- a/wol/manifest.yml
+++ b/wol/manifest.yml
@@ -1,7 +1,7 @@
 version: 1
 name: wol
-system: true
 description: "Force enable the Wake-on-lan on first ethernet device"
+system: true
 all:
   install-script: "install.sh"
   copy: "all"
@@ -13,6 +13,10 @@ available-for:
   broadwell-4.4.302:
   broadwellnk-4.4.180:
   broadwellnk-4.4.302:
+  broadwellnkv2-4.4.180:
+  broadwellnkv2-4.4.302:
+  broadwellntbap-4.4.180:
+  broadwellntbap-4.4.302:
   epyc7002-7.1-5.10.55:
   epyc7002-7.2-5.10.55:
   denverton-4.4.180:
