--- a/acpid/manifest.yml
+++ b/acpid/manifest.yml
@@ -21,7 +21,8 @@ available-for:
   broadwellntbap-4.4.59:
   broadwellntbap-4.4.180:
   broadwellntbap-4.4.302:
-  epyc7002-5.10.55:
+  epyc7002-7.1-5.10.55:
+  epyc7002-7.2-5.10.55:
   denverton-4.4.59:
   denverton-4.4.180:
   denverton-4.4.302:
